Created Component librry

--- a/index.html
+++ b/index.html
@@ -4,14 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Component Library</title>
 </head>
 <body>
-    <h1>Welcome this is H1</h1>
-    <H2>Welcome this is H2</H2>
-    <h3>Welcome this is H3</h3>
-    <h4>Welcome this is H4</h4>
-    <h5>Welcome this is H5</h5>
-    <h6>Welcome this is H6</h6>
+    <h1>This is my Component Library</h1>
+    <p>hi i am kunal jain and i am creating a Library to make my projects look good</p>
+
+    <hr>
+
+    <h2>@typography</h2>
+
+    <h1>This is H1 heading</h1>
+    <h2>This is H2 heading</h2>
+    <p>This is normal text. This is free flowing and will wrap at the end like a paragraph. </p>
+    <small>this is smaller text</small>
+
+    <hr>
+
+    <h2>@container</h2>
+
+    <h3>Fluid container</h3>
+    <div>This is a fluid container and it will go till the end of the page.</div>
+    <h3>Center container</h3>
+    <div>This is a centered container and it will go till the specified width.</div>
+
+    <hr>
+
+    <h2>@links</h2>
+
+    <a href="https:/google.com">Google</a>
+    <a href="/">This goes nowhere</a>
+
+    <hr>
+
+    <h2>@lists</h2>
+    <h3>Unordered List</h3>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
+    <h3>Unordered Inline List</h3>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
+
+    <h3>Reverse Ordered List</h3>
+    <Ol>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </Ol>
+
+    <hr>
+
+    <h2>@nav</h2>
+    <nav>
+        <div>iAmBrand</div>
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/">Products</a>
+            </li>
+            <li>
+                <a href="/">About</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
+
+    <h2>@header</h2>
+    <header>
+        <img src="images/heroimage.svg"/>
+        <h1>heading inside hero</h1>
+    </header>
 </body>
 </html>
