--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <h2>@links</h2>
 
-    <a href="https:/google.com">Google</a>
+    <a href="https://www.google.com/">Google</a>
     <a href="/">This goes nowhere</a>
 
     <hr>
