--- a/index.html
+++ b/index.html
@@ -81,7 +81,32 @@
     <h2>@header</h2>
     <header>
         <img src="images/heroimage.svg"/>
-        <h1>heading inside hero</h1>
+        <h1>Heading inside header</h1>
     </header>
+
+    <hr>
+
+    <h2>@section</h2>
+    <section>
+        <h3>White Section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>Off White Section</h3>
+        <p>This will have gray background</p>
+    </section>
+
+    <hr>
+
+    <h2>@footer</h2>
+    <footer>
+        <div>some small heading inside footer</div>
+        <ul>
+            <li>social one</li>
+            <li>social two</li>
+            <li>social three</li>
+        </ul>
+    </footer>
 </body>
 </html>
