--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+    <!--CSS way 1: Style Tag
+
+        <style>
+        body {
+            color: red;
+        }
+    </style> -->
+    <!-- Third way of doing CSS: external link-->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -20,6 +29,7 @@
     <h2>This is H2 heading</h2>
     <p>This is normal text. This is free flowing and will wrap at the end like a paragraph. </p>
     <small>this is smaller text</small>
+    <p>This paragraph will have a <strong>BOLD</strong> text</p>
 
     <hr>
 
