--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <h2>@container</h2>
 
     <h3>Fluid container</h3>
-    <div class="container-fluid">This is a fluid container and it will go till the end of the page.</div>
+    <div class="container">This is a fluid container and it will go till the end of the page.</div>
     <h3>Center container</h3>
-    <div class="container">This is a centered container and it will go till the specified width.</div>
+    <div class="container container-center">This is a centered container and it will go till the specified width.</div>
 
     <hr>
 
