--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <h2>@links</h2>
 
-    <a href="https://www.google.com/">Google</a>
-    <a href="/">This goes nowhere</a>
+    <a class="link link-primary" href="https://www.google.com/">Google</a>
+    <a class="link link-secondary" href="/">This goes nowhere</a>
 
     <hr>
 
