--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 
     <h2>@lists</h2>
     <h3>Unordered List</h3>
-    <ul>
+    <p>This list will not have the bullet</p>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
     </ul>
     <h3>Unordered Inline List</h3>
-    <ul>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
