--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     </ul>
     <h3>Unordered Inline List</h3>
     <ul class="list-non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
+        <li class="list-item-inline">Item One</li>
+        <li class="list-item-inline">Item Two</li>
+        <li class="list-item-inline">Item Three</li>
     </ul>
 
     <h3>Reverse Ordered List</h3>
-    <Ol>
+    <Ol reversed> 
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
