--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <hr>
 
     <h2>@header</h2>
-    <header>
-        <img src="images/heroimage.svg" />
+    <header class="hero">
+        <img class="hero-img" src="images/heroimage.svg" />
         <h1>Heading inside header</h1>
     </header>
 
