--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <h2>@header</h2>
     <header class="hero">
         <img class="hero-img" src="images/heroimage.svg" />
-        <h1>Heading inside header</h1>
+        <h1 class="hero-heading">Kunal Jain <span style="color: #047857
+            ;">Web Dev</span></h1>
     </header>
 
     <hr>
