--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     <hr>
 
     <h2>@section</h2>
-    <section>
-        <h3>White Section</h3>
+    <section class="section">
+        <h1>White Section</h1>
         <p>This will have white background</p>
     </section>
 
-    <section>
-        <h3>Off White Section</h3>
+    <section class="section ow">
+        <h1>Off White Section</h1>
         <p>This will have gray background</p>
     </section>
 
