--- a/index.html
+++ b/index.html
@@ -102,13 +102,15 @@
 
     <h2>@section</h2>
     <section class="section">
-        <h1>White Section</h1>
-        <p>This will have white background</p>
+        <div class="container container-center">        <h1>White Section</h1>
+            <p>This will have white background. i am typing all of this just make the text large and show how it will look in the main webcite at the center</p></div>
+
     </section>
 
     <section class="section ow">
+        <div class="container container-center">
         <h1>Off White Section</h1>
-        <p>This will have gray background</p>
+        <p>This will have gray background. i am typing all of this just make the text large and show how it will look in the main webcite at the center</p></div>
     </section>
 
     <hr>
