--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
     <h2>@section</h2>
     <section class="section">
         <div class="container container-center">        <h1>White Section</h1>
-            <p>This will have white background. i am typing all of this just make the text large and show how it will look in the main webcite at the center</p></div>
+            <p>This will have white background. i am typing all of this just make the text large and show how it will look in the main website at the center</p></div>
 
     </section>
 
     <section class="section ow">
         <div class="container container-center">
         <h1>Off White Section</h1>
-        <p>This will have gray background. i am typing all of this just make the text large and show how it will look in the main webcite at the center</p></div>
+        <p>This will have gray background. i am typing all of this just make the text large and show how it will look in the main website at the center</p></div>
     </section>
 
     <hr>
 
     <h2>@footer</h2>
-    <footer>
-        <div>some small heading inside footer</div>
-        <ul>
-            <li>social one</li>
-            <li>social two</li>
-            <li>social three</li>
+    <footer class="footer">
+        <div class="footer-header">These are all my Social Links</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">Social One</a></li>
+            <li class="list-item-inline"><a class="link" href="/">Social Two</a></li>
+            <li class="list-item-inline"><a class="link" href="/">Social Three</a></li>
         </ul>
     </footer>
 </body>
