--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
     <hr>
 
     <h2>@lists</h2>
-    <h3>Unordered List</h3>
-    <p>This list will not have the bullet</p>
+    <h3 style="text-align: center;">Unordered List</h3>
+    <p style="text-align: center;">This list will not have the bullet</p>
     <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
     </ul>
-    <h3>Unordered Inline List</h3>
+    <h3 style="text-align: center;">Unordered Inline List</h3>
     <ul class="list-non-bullet">
         <li class="list-item-inline">Item One</li>
         <li class="list-item-inline">Item Two</li>
         <li class="list-item-inline">Item Three</li>
     </ul>
 
-    <h3>Reverse Ordered List</h3>
-    <Ol reversed>
+    <h3 style="text-align: center;">Reverse Ordered List</h3>
+    <Ol reversed class="list-ordered-center">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
