alignment and background colour

--- a/index.html
+++ b/index.html
@@ -18,38 +18,41 @@
 </head>
 
 <body>
-    <h1>This is my Component Library</h1>
-    <p>hi i am kunal jain and i am creating a Library to make my projects look good</p>
+    <div class="head-color">
+    <h1 style="text-align: center;">This is my Component Library</h1>
+    <p style="text-align: center;">hi i am kunal jain and i am creating a Library to make my projects look good</p>
+    </div>
 
     <hr>
 
     <h2>@typography</h2>
-
+    <div style="text-align: center; background-color: var(--off-white); padding: 1rem; ">
     <h1>This is H1 heading</h1>
     <h2>This is H2 heading</h2>
     <p>This is normal text. This is free flowing and will wrap at the end like a paragraph. </p>
     <small>this is smaller text</small>
     <p>This paragraph will have a <strong>BOLD</strong> text</p>
-
+    </div>
     <hr>
 
     <h2>@container</h2>
-
-    <h3>Fluid container</h3>
-    <div class="container">This is a fluid container and it will go till the end of the page.</div>
-    <h3>Center container</h3>
-    <div class="container container-center">This is a centered container and it will go till the specified width.</div>
-
+    <div style="background-color: var(--primary-color); padding: 1rem; border-radius: 1rem;">
+    <h3 style="text-align: center;">Fluid container</h3>
+    <div style="text-align: center;" class="container">This is a fluid container and it will go till the end of the page.</div>
+    <h3 style="text-align: center;">Center container</h3>
+    <div style="text-align: center;" class="container container-center">This is a centered container and it will go till the specified width.</div>
+</div>
     <hr>
 
     <h2>@links</h2>
-
+    <div class="link-center">
     <a class="link link-primary" href="https://www.google.com/">Google</a>
     <a class="link link-secondary" href="/">This goes nowhere</a>
-
+    </div>
     <hr>
 
     <h2>@lists</h2>
+    <div style="background-color: var(--off-white); padding: 1rem;">
     <h3 style="text-align: center;">Unordered List</h3>
     <p style="text-align: center;">This list will not have the bullet</p>
     <ul class="list-non-bullet">
@@ -70,7 +73,7 @@
         <li>Item Two</li>
         <li>Item Three</li>
     </Ol>
-
+</div>
     <hr>
 
     <h2>@nav</h2>
