--- a/index.html
+++ b/index.html
@@ -19,61 +19,63 @@
 
 <body>
     <div class="head-color">
-    <h1 style="text-align: center;">This is my Component Library</h1>
-    <p style="text-align: center;">hi i am kunal jain and i am creating a Library to make my projects look good</p>
+        <h1 style="text-align: center;">This is my Component Library</h1>
+        <p style="text-align: center;">hi i am kunal jain and i am creating a Library to make my projects look good</p>
     </div>
 
     <hr>
 
     <h2>@typography</h2>
     <div style="text-align: center; background-color: var(--off-white); padding: 1rem; ">
-    <h1>This is H1 heading</h1>
-    <h2>This is H2 heading</h2>
-    <p>This is normal text. This is free flowing and will wrap at the end like a paragraph. </p>
-    <small>this is smaller text</small>
-    <p>This paragraph will have a <strong>BOLD</strong> text</p>
+        <h1>This is H1 heading</h1>
+        <h2>This is H2 heading</h2>
+        <p>This is normal text. This is free flowing and will wrap at the end like a paragraph. </p>
+        <small>this is smaller text</small>
+        <p>This paragraph will have a <strong>BOLD</strong> text</p>
     </div>
     <hr>
 
     <h2>@container</h2>
     <div style="background-color: var(--primary-color); padding: 1rem; border-radius: 1rem;">
-    <h3 style="text-align: center;">Fluid container</h3>
-    <div style="text-align: center;" class="container">This is a fluid container and it will go till the end of the page.</div>
-    <h3 style="text-align: center;">Center container</h3>
-    <div style="text-align: center;" class="container container-center">This is a centered container and it will go till the specified width.</div>
-</div>
+        <h3 style="text-align: center;">Fluid container</h3>
+        <div style="text-align: center;" class="container">This is a fluid container and it will go till the end of the
+            page.</div>
+        <h3 style="text-align: center;">Center container</h3>
+        <div style="text-align: center;" class="container container-center">This is a centered container and it will go
+            till the specified width.</div>
+    </div>
     <hr>
 
     <h2>@links</h2>
     <div class="link-center">
-    <a class="link link-primary" href="https://www.google.com/">Google</a>
-    <a class="link link-secondary" href="/">This goes nowhere</a>
+        <a class="link link-primary" href="https://www.google.com/">Google</a>
+        <a class="link link-secondary" href="/">This goes nowhere</a>
     </div>
     <hr>
 
     <h2>@lists</h2>
     <div style="background-color: var(--off-white); padding: 1rem;">
-    <h3 style="text-align: center;">Unordered List</h3>
-    <p style="text-align: center;">This list will not have the bullet</p>
-    <ul class="list-non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-    </ul>
-    <h3 style="text-align: center;">Unordered Inline List</h3>
-    <ul class="list-non-bullet">
-        <li class="list-item-inline">Item One</li>
-        <li class="list-item-inline">Item Two</li>
-        <li class="list-item-inline">Item Three</li>
-    </ul>
+        <h3 style="text-align: center;">Unordered List</h3>
+        <p style="text-align: center;">This list will not have the bullet</p>
+        <ul class="list-non-bullet">
+            <li>Item One</li>
+            <li>Item Two</li>
+            <li>Item Three</li>
+        </ul>
+        <h3 style="text-align: center;">Unordered Inline List</h3>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline">Item One</li>
+            <li class="list-item-inline">Item Two</li>
+            <li class="list-item-inline">Item Three</li>
+        </ul>
 
-    <h3 style="text-align: center;">Reverse Ordered List</h3>
-    <Ol reversed class="list-ordered-center">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-    </Ol>
-</div>
+        <h3 style="text-align: center;">Reverse Ordered List</h3>
+        <Ol reversed class="list-ordered-center">
+            <li>Item One</li>
+            <li>Item Two</li>
+            <li>Item Three</li>
+        </Ol>
+    </div>
     <hr>
 
     <h2>@nav</h2>
@@ -105,15 +107,20 @@
 
     <h2>@section</h2>
     <section class="section">
-        <div class="container container-center">        <h1>White Section</h1>
-            <p>This will have white background. i am typing all of this just make the text large and show how it will look in the main website at the center</p></div>
+        <div class="container container-center">
+            <h1>White Section</h1>
+            <p>This will have white background. i am typing all of this just make the text large and show how it will
+                look in the main website at the center</p>
+        </div>
 
     </section>
 
     <section class="section ow">
         <div class="container container-center">
-        <h1>Off White Section</h1>
-        <p>This will have gray background. i am typing all of this just make the text large and show how it will look in the main website at the center</p></div>
+            <h1>Off White Section</h1>
+            <p>This will have gray background. i am typing all of this just make the text large and show how it will
+                look in the main website at the center</p>
+        </div>
     </section>
 
     <hr>
